基础接口完善